k8s/base/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: boo-prod
  labels: { app: ui }
spec:
  replicas: 1
  selector: { matchLabels: { app: ui } }
  template:
    metadata: { labels: { app: ui } }
    spec:
      containers:
        - name: ui
          image: registry.folk-decibel.ts.net/boo-run/boo-run-ui
          ports: [ { containerPort: 80 } ]

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: boo-prod
spec:
  selector: { app: ui }
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: boo-prod
  labels: { version: "2" }
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: boo.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port: { number: 80 }
